<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <com.eyeque.mono.PatternView
        android:layout_width="fill_parent"
        android:layout_height="360sp"
        android:id="@+id/drawView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/powerText"
        android:text="@string/powerTextString"
        android:layout_below="@+id/drawView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/angleText"
        android:text="@string/angleTextString"
        android:layout_below="@+id/drawView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distText"
        android:text="@string/distTextString"
        android:layout_below="@+id/drawView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20sp"
        android:layout_marginTop="5sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eyeText"
        android:text="@string/eyeButtonTextString"
        android:layout_below="@+id/powerText"
        android:textAllCaps="false"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="40sp"
        android:gravity="left"
        android:background="?attr/selectableItemBackground"
        android:textColor="#3F51B5"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contButton"
        android:text="@string/contButtonTextString"
        android:layout_below="@+id/distText"
        android:textAllCaps="false"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/myroundbutton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alignSeekBar"
        android:max="280"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/eyeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/seperateLineView"
        android:layout_below="@+id/eyeText"
        android:layout_marginTop="85sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/darker_gray"/-->

    <Button
        android:layout_width="170dip"
        android:layout_height="50dip"
        android:paddingLeft="20sp"
        android:id="@+id/closerButton"
        android:text="@string/closerButtonTextString"
        android:layout_below="@+id/contButton"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:background="?attr/selectableItemBackground"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <Button
        android:layout_width="170dip"
        android:layout_height="100dip"
        android:layout_marginTop="10sp"
        android:paddingTop="20sp"
        android:paddingRight="20sp"
        android:id="@+id/furtherButton"
        android:text="@string/furtherButtonTextString"
        android:layout_below="@+id/contButton"
        android:textAllCaps="false"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:background="?attr/selectableItemBackground"
        android:textColor="#3F51B5"
        android:textSize="20sp" />
    />

</RelativeLayout>
